trying to fix forms on mobile

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -258,11 +258,11 @@ background-position: 0 -15px;
 
 input, textarea, input[type="text"], .uneditable-input {
 height: auto;
-width: 255px;
+width: 225px;
 }
 
 select {
-width: 269px;
+width: 239px;
 border: 1px solid #cccccc;
 background-color: white;
 }
